--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,9 @@ clap = { version = "4.1.8", features = [ "derive", "wrap_help" ] }
 derive-enum-from-into = "0.1.1"
 mime = "0.3.16"
 nanoid = "0.4.0"
-reqwest = { version = "0.11.14", features = [ "json", "multipart" ] }
+reqwest = { version = "0.11.14", default-features=false, features = [ "json", "multipart", "rustls-tls" ] }
 serde = { version = "1.0.152", features = [ "derive" ] }
 serde_json = "1.0.94"
 tokio = { version = "1.26.0", features = [ "rt-multi-thread", "net", "fs", "io-std", "process", "macros", "sync" ] }
 tracing = "0.1.37"
-tracing-subscriber = "0.3.16"
+tracing-subscriber = { version = "0.3.16", features = [ "env-filter" ] }
